--- a/src/css/index.css
+++ b/src/css/index.css
@@ -36,3 +36,18 @@ header h1 {
 	opacity: 0.7;
 	color: #222831 !important;
 }
+
+.container {
+	height: 200px;
+	position: relative;
+	/* border: 3px solid green; */
+  }
+
+.center {
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+  }
