--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,130 +1,136 @@
+@charset "UTF-8";
 html,
 body {
-	text-align: center;
-	padding: 0;
-	margin: 0;
-	background: transparent;
-	/* background-color: #222831 !important; */
-	background-color: #EEEEEE !important;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  /* background-color: #222831 !important; */
+  background-color: #EEEEEE !important;
 }
 
 /* Use OS default fonts */
 body {
-	font-family:
-		system-ui,
-		-apple-system,
-		'Segoe UI',
-		Roboto,
-		Helvetica,
-		Arial,
-		sans-serif,
-		'Apple Color Emoji',
-		'Segoe UI Emoji';
-	text-rendering: optimizeLegibility;
-	font-feature-settings: 'liga', 'clig', 'kern';
+  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  text-rendering: optimizeLegibility;
+  font-feature-settings: 'liga', 'clig', 'kern';
 }
 
 header {
-	position: flex;
+  position: flex;
 }
 
-header h1 {
-	font-size: 60px;
-	font-weight: 200;
-	margin: 0;
-	padding: 0;
-	opacity: 0.7;
-	color: #222831 !important;
+.display-1 {
+  font-size: 60px !important;
+  font-weight: 200 !important;
+  margin: 0;
+  padding: 10px;
+  opacity: 0.7;
+  color: #222831 !important;
 }
 
 .container {
-	height: 200px;
-	position: relative;
-	/* border: 3px solid green; */
-  }
+  height: 250px;
+  position: relative;
+}
 
 .center {
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-  }
-
-  
-:root {
-	--delay: 1000ms;
-	--duration: 800ms;
-	--iterations: 1;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
+
+:root {
+  --delay: 1000ms;
+  --duration: 800ms;
+  --iterations: 1;
+}
+
 /* •·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
-
-
 .reveal-text,
 .reveal-text::after {
-	animation-delay: var(--animation-delay, 2s);
-	animation-iteration-count: var(--iterations, 1);
-	animation-duration: var(--duration, 800ms);
-	animation-fill-mode: both;
-	animation-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
+  animation-delay: var(--animation-delay, 2s);
+  animation-iteration-count: var(--iterations, 1);
+  animation-duration: var(--duration, 800ms);
+  animation-fill-mode: both;
+  animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .reveal-text {
-	--animation-delay: var(--delay, 0);
-	--animation-duration: var(--duration, 800ms);
-	--animation-iterations: var(--iterations, 1);
-	position: relative;
-	font-size: 10vw;
-	animation-name: clip-text;
-	color: #FFF;
-	white-space: nowrap;
-	cursor: default;
-	
-	&::after {
-		content: "";
-		position: absolute;
-		z-index: 999;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: #f2f98b;
-		transform: scaleX(0);
-		transform-origin: 0 50%;
-		pointer-events: none;
-		animation-name: text-revealer;
-	}
-	
+  --animation-delay: var(--delay, 0);
+  --animation-duration: var(--duration, 800ms);
+  --animation-iterations: var(--iterations, 1);
+  position: relative;
+  font-size: 8vw !important;
+  animation-name: clip-text;
+  color: #FFF;
+  white-space: nowrap;
+  cursor: default;
 }
 
+.reveal-text::after {
+  content: "";
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #00ADB5;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  pointer-events: none;
+  animation-name: text-revealer;
+}
 
 @keyframes clip-text {
-	from {
-		clip-path: inset(0 100% 0 0);
-	}
-	to {
-		clip-path: inset(0 0 0 0);
-	}
+  from {
+    clip-path: inset(0 100% 0 0);
+  }
+  to {
+    clip-path: inset(0 0 0 0);
+  }
 }
 
-
 @keyframes text-revealer {
-	
-	0%, 50% {
-		transform-origin: 0 50%;
-	}
-	
-	60%, 100% {
-		transform-origin: 100% 50%;		
-	}
+  0%,
+  50% {
+    transform-origin: 0 50%;
+  }
+  60%,
+  100% {
+    transform-origin: 100% 50%;
+  }
+  60% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scaleX(0);
+  }
+}
 
-	
-	60% {
-		transform: scaleX(1);
-	}
-	
-	100% {
-		transform: scaleX(0);
-	}
+.separator {
+  margin-top: 15px;
+  margin-bottom: 40px;
+  border: 0;
+}
+
+.separator--line {
+  border: 0;
+  border-bottom: 1.9px solid #222831;
+  width: 0;
+  animation: separator-width 1s ease-out forwards;
+  animation-delay: 2s;
+}
+
+@keyframes separator-width {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
