--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/* Variables */
 html,
 body {
   text-align: center;
@@ -9,7 +9,6 @@ body {
   background-color: #EEEEEE !important;
 }
 
-/* Use OS default fonts */
 body {
   font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   text-rendering: optimizeLegibility;
@@ -49,7 +48,7 @@ header {
   --iterations: 1;
 }
 
-/* •·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
+/* Text Reveal */
 .reveal-text,
 .reveal-text::after {
   animation-delay: var(--animation-delay, 2s);
@@ -112,6 +111,7 @@ header {
   }
 }
 
+/* Separator Line */
 .separator {
   margin-top: 15px;
   margin-bottom: 40px;
